# stonefish_ros2_bluerov2

alpha_description/xacro/: alpha.config.xacro
bluerov2_cirtesu_core/: CMakeLists.txt  README.md  package.xml
bluerov2_cirtesu_core/config/: bluerov.rviz  bluerov_sim.rviz  cv7.yml  ekf_config.yaml  rtabmap.rviz
bluerov2_cirtesu_core/launch/: ahrs.launch.py  alpha.launch.py  core.launch.py  core_alpha_sim.launch.py  core_sim.launch.py  localization.launch.py  robot_description.launch.py  robot_description_alpha.launch.py  rtabmap_sim.launch.py  rtabmap_zed2.launch.py
bluerov2_cirtesu_core/resources/cirtesu/: cirtesu.dae
bluerov2_cirtesu_core/src/: depth_sensor_odom.cpp
bluerov2_cirtesu_core/urdf/bluerov2_alpha/: bluerov2_alpha.xacro  urdf.xacro
bluerov2_cirtesu_core/urdf/bluerov2_heavy/: bluerov2.xacro  urdf.xacro  urdf_payload.xacro
bluerov2_cirtesu_core/urdf/cirtesu/: cirtesu.urdf.xacro
bluerov2_cirtesu_core/urdf/t200/: urdf.xacro
bluerov_keyboard_control/: package.xml  setup.cfg  setup.py
bluerov_keyboard_control/bluerov_keyboard_control/: bluerov_keyboard_control.py
bluerov_mav2ros/include/: bridge.py
bluerov_mav2ros/launch/: bluerov_mav2ros.launch.py
bluerov_mav2ros/scripts/: node.py
cirtesu_stonefish/: CMakeLists.txt  README.md  package.xml
cirtesu_stonefish/config/: peacetolero.rviz
cirtesu_stonefish/launch/: bluerov_alpha_cirtesu.launch.py  bluerov_cirtesu.launch.py  bluerov_offshore.launch.py  peacetolero_alpha_cirtesu.launch.py
cirtesu_stonefish/scenarios/cirtesu/: bluerov2_alpha_cirtesu_tank.scn  bluerov2_alpha_offshore_net.scn  bluerov2_cirtesu.scn  bluerov2_cirtesu_alpha.scn  bluerov2_heavy_cirtesu_tank.scn  bluerov2_offshore_net.scn  bluerov_pipe.scn  cirtesu_aruco.scn  cirtesu_poster_net.scn  cirtesu_poster_pipe.scn  net_offshore.scn  peacetolero_alpha_robot.scn  peacetolero_cirtesu_tank.scn
cirtesu_stonefish/scenarios/environments/: cirtesu.scn
cirtesu_stonefish/scenarios/objects/: blackbox.scn  buoy.scn  elbow.scn  frame.scn  pipe130.scn  small_pipe.scn  tee.scn
cirtesu_stonefish/scripts/: ardusim_patch.py  bluerov2_logitechF310teleop.py  joy_control_ros2_sim.py  odom2tf.py  server_sim.py
cirtesu_stonefish/urdf/cirtesu/: cirtesu.urdf.xacro
log/: latest_list
stonefish_bluerov2/launch/: bluerov2_sim.py  bluesim.py
stonefish_bluerov2/scenarios/: bluerov2.scn
stonefish_bluerov2/scripts/: ardusim_patch.py
