<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov2_cirtesu_core</name>
  <version>0.0.0</version>
  <description>core package of the bluerov2_cirtesu_rubot</description>
  <maintainer email="barajas@uji.es">salvador_lopez</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  
  <exec_depend>rtabmap_launch</exec_depend> 
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
